# ShockFitting

./: CMakeLists.txt  README.md  compile.sh  compile2.sh  compile2_debug.sh  index.html  params.json
config/: CMakeLists.txt  ShockFitting_config.h.in  ShockFitting_svnversion.hh.in
config/sysinfo/: CMakeLists.txt
src/: CMakeLists.txt
src/CFDSolverSF/: CMakeLists.txt  COOLFluiD.cxx  COOLFluiD.hh  DummyCFDSolver.cxx  DummyCFDSolver.hh  OverwriteInputFile.cxx  OverwriteInputFile.hh
src/Common/: FileLogManip.hh  MeshData.hh  PhysicsData.hh
src/ConverterSF/: CFmesh2StartingTriangle.cxx  CFmesh2StartingTriangle.hh  CFmesh2StartingTriangleFVM.cxx  CFmesh2StartingTriangleFVM.hh  CFmesh2StartingTriangleFreez.cxx  CFmesh2StartingTriangleFreez.hh  CFmesh2Triangle.cxx  CFmesh2Triangle.hh  CFmesh2TriangleFVM.cxx  CFmesh2TriangleFVM.hh  CFmesh2TriangleFreez.cxx  CFmesh2TriangleFreez.hh  CMakeLists.txt  DummyConverter.cxx  DummyConverter.hh  ShockFileConverter.cxx  ShockFileConverter.hh  Tecplot2StartingTriangle.cxx  Tecplot2StartingTriangle.hh  Tecplot2Triangle.cxx  Tecplot2Triangle.hh  TecplotFVM2StartingTriangle.cxx  TecplotFVM2StartingTriangle.hh  TecplotFVM2Triangle.cxx  TecplotFVM2Triangle.hh  Triangle2CFmesh.cxx  Triangle2CFmesh.hh  Triangle2CFmeshFVM.cxx  Triangle2CFmeshFVM.hh  Triangle2CFmeshFreez.cxx  Triangle2CFmeshFreez.hh  Triangle2Tecplot.cxx  Triangle2Tecplot.hh
src/CopyMakerSF/: CMakeLists.txt  CopyRoeValues1.cxx  CopyRoeValues1.hh  CopyRoeValues2.cxx  CopyRoeValues2.hh  DummyCopyMaker.cxx  DummyCopyMaker.hh  MeshBackup.cxx  MeshBackup.hh  MeshRestoring.cxx  MeshRestoring.hh
src/FieldInterpolatorSF/: BoxFieldInterpolator.cxx  BoxFieldInterpolator.hh  CMakeLists.txt  DummyFieldInterpolator.cxx  DummyFieldInterpolator.hh
src/FileProcessingSF/: CMakeLists.txt  DummyFileProcessing.cxx  DummyFileProcessing.hh  ReadCFmesh.cxx  ReadCFmesh.hh  ReadPointCloud.cxx  ReadPointCloud.hh  WritePointCloud.cxx  WritePointCloud.hh
src/Framework/: BaseShockFitting.cxx  BaseShockFitting.hh  BoundaryConnectivity.hh  CFDSolver.cxx  CFDSolver.hh  CMakeLists.txt  ChemicalConsts.hh  ChemicalInfo.cxx  ChemicalInfo.hh  Clist.hh  Compatibility.hh  Connectivity.hh  Converter.cxx  Converter.hh  CopyMaker.cxx  CopyMaker.hh  Field.hh  FieldInterpolator.cxx  FieldInterpolator.hh  FileLogManip.hh  FileProcessing.cxx  FileProcessing.hh  IOFunctions.hh  Log.hh  MeshData.hh  MeshGenerator.cxx  MeshGenerator.hh  NormalUnitVect.cxx  NormalUnitVect.hh  PhysicsConsts.hh  PhysicsData.hh  PhysicsInfo.cxx  PhysicsInfo.hh  ReadInterpolateWrite.cxx  ReadInterpolateWrite.hh  ReferenceInfo.cxx  ReferenceInfo.hh  Remeshing.cxx  Remeshing.hh  ShockDetector.cxx  (+17 more)
src/MathTools/: Area.cxx  Area.hh  Array2D.hh  Array3D.hh  Binsrc.cxx  Binsrc.hh  CMakeLists.txt  CrossProd.hh  Ishel.cxx  Ishel.hh  Isortrx.cxx  Isortrx.hh  Jcycl.hh  LeastSquaresMethod.cxx  LeastSquaresMethod.hh  MinMax.hh  MovingAverageFilter.cxx  MovingAverageFilter.hh  Solg.hh
src/MeshGeneratorSF/: CMakeLists.txt  ChemConst.cxx  ChemConst.hh  ChemInfo.cxx  ChemInfo.hh  ChemicalInfo.cxx  ChemicalInfo.hh  DummyMeshGenerator.cxx  DummyMeshGenerator.hh  MedianDualCell.cxx  MedianDualCell.hh  MeshInfo.cxx  MeshInfo.hh  PhysicsInfo.cxx  PhysicsInfo.hh  ReSdwInfo.cxx  ReSdwInfo.hh  ReadTriangle.cxx  ReadTriangle.hh  ReadTriangleFreez.cxx  ReadTriangleFreez.hh  ReferenceInfo.cxx  ReferenceInfo.hh  Triangle.cxx  Triangle.hh  TriangleExe.cxx  TriangleExe.hh  Tricall.cxx  Tricall.hh
src/RemeshingSF/: BndryFacePtrFreez.cxx  BndryFacePtrFreez.hh  BndryNodePtr.cxx  BndryNodePtr.hh  BndryNodePtrFreez.cxx  BndryNodePtrFreez.hh  CMakeLists.txt  ChangeBndryPtr.cxx  ChangeBndryPtr.hh  CoIntrPnt.cxx  CoIntrPnt.hh  CoNorm.cxx  CoNorm.hh  CoNorm4Ar.cxx  CoNorm4Ar.hh  CoNorm4B.cxx  CoNorm4B.hh  CoNorm4Pg.cxx  CoNorm4Pg.hh  CoNorm4TCneq.cxx  CoNorm4TCneq.hh  CoNormPG.cxx  CoNormPG.hh  CoNormPg.cxx  CoNormPg.hh  CoPntDispl.cxx  CoPntDispl.hh  DummyRemeshing.cxx  DummyRemeshing.hh  FindBEdg.cxx  FindBEdg.hh  FixMshSps.cxx  FixMshSps.hh  FndPhPs.cxx  FndPhPs.hh  FxMshSps.cxx  FxMshSps.hh  RdDps.cxx  RdDps.hh  RdDpsEq.cxx  (+5 more)
src/SConfig/: CMakeLists.txt  ConfigException.hh  ConfigFileReader.cxx  ConfigFileReader.hh  ConfigMap.hh  ConfigObject.cxx  ConfigObject.hh  ConfigOption.hh  Counter.hh  Factory.hh  GenericOption.hh  MMap.hh  NamedObject.hh  ObjectProvider.hh  OptionValidation.hh  Provider.hh  SConfigPtr.hh  SharedPtr.hh  StringManip.hh
src/ShockDetectorSF/: CMakeLists.txt  ComputeGradient.cxx  ComputeGradient.hh  ComputeShockPointsState.cxx  ComputeShockPointsState.hh  DensityGradientMaximaPg2D.cxx  DensityGradientMaximaPg2D.hh  DetectorAlgorithm.cxx  DetectorAlgorithm.hh  DummyShockDetector.cxx  DummyShockDetector.hh  FindShockSurfaceNormals2D.cxx  FindShockSurfaceNormals2D.hh  GnoffoShockSensor.cxx  GnoffoShockSensor.hh  IdentifySpecialPoints.cxx  IdentifySpecialPoints.hh  NormalMachNumberPg2D.cxx  NormalMachNumberPg2D.hh  RedistributeShockPoints.cxx  RedistributeShockPoints.hh
src/StateUpdaterSF/: CMakeLists.txt  CoDc.cxx  CoDc.hh  CoShock.cxx  CoShock.hh  CoUTP.cxx  CoUTP.hh  ComputeHeatFlux2DPg.cxx  ComputeHeatFlux2DPg.hh  ComputeResidual.cxx  ComputeResidual.hh  ComputeStateDps.cxx  ComputeStateDps.hh  ComputeStateDps4Ar.cxx  ComputeStateDps4Ar.hh  ComputeStateDps4Pg.cxx  ComputeStateDps4Pg.hh  ComputeStateDps4TCneq.cxx  ComputeStateDps4TCneq.hh  ComputeStateDpsAr.cxx  ComputeStateDpsAr.hh  ComputeStateDpsPg.cxx  ComputeStateDpsPg.hh  ComputeStateDpsTCneq.cxx  ComputeStateDpsTCneq.hh  CopyRoeValues.cxx  CopyRoeValues.hh  CopyRoeValues1_0.cxx  CopyRoeValues1_0.hh  DiscrErrorNormL1.cxx  DiscrErrorNormL1.hh  DiscrErrorNormL1weighted.cxx  DiscrErrorNormL1weighted.hh  DiscrErrorNormL2.cxx  DiscrErrorNormL2.hh  DummyStateUpdater.cxx  DummyStateUpdater.hh  FixStateSps.cxx  FixStateSps.hh  Interp.cxx  (+15 more)
src/TestAPISF/: CMakeLists.txt  input.case  testAPI.cxx
src/TestIOInterpolateSF/: CMakeLists.txt  input.case  ipic3d.out.0  ipic3d.out.1  testIOInterpolate.cxx
src/TestMeshGeneratorSF/: CMakeLists.txt  input.case  na00.1.node  na00.1.poly  testMeshGenerator.cxx
(+110 files in other folders)
